<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewLabelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_text_title"
        android:layout_marginTop="@dimen/margin_text_title"
        android:layout_marginEnd="@dimen/margin_text_title"
        android:text="@string/text_label_title"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="@dimen/null_dp_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_text_title"
        android:layout_marginTop="@dimen/margin_text_title"
        android:layout_marginEnd="@dimen/margin_text_title"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLabelOriginalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_label_origin_title"
        android:layout_marginTop="@dimen/margin_label_origin_title"
        android:layout_marginEnd="@dimen/margin_label_origin_title"
        android:text="@string/text_label_origin_title"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewOriginalTitle"
        android:layout_width="@dimen/null_dp_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_label_origin_title"
        android:layout_marginTop="@dimen/margin_label_origin_title"
        android:layout_marginEnd="@dimen/margin_label_origin_title"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewLabelRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_label_rating"
        android:layout_marginTop="@dimen/margin_label_rating"
        android:layout_marginEnd="@dimen/margin_label_rating"
        android:text="@string/textViewLabelRating"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitle" />

    <TextView
        android:id="@+id/textViewRating"
        android:layout_width="@dimen/null_dp_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_label_rating"
        android:layout_marginTop="@dimen/margin_label_rating"
        android:layout_marginEnd="@dimen/margin_label_rating"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitle" />

    <TextView
        android:id="@+id/textViewLabelReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_label_release_date"
        android:layout_marginTop="@dimen/margin_label_release_date"
        android:layout_marginEnd="@dimen/margin_label_release_date"
        android:text="@string/textViewReleaseDate"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

    <TextView
        android:id="@+id/textViewReleaseDate"
        android:layout_width="@dimen/null_dp_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_label_release_date"
        android:layout_marginTop="@dimen/margin_label_release_date"
        android:layout_marginEnd="@dimen/margin_label_release_date"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

    <TextView
        android:id="@+id/textViewLabelDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_label_description"
        android:layout_marginTop="@dimen/margin_label_description"
        android:layout_marginEnd="@dimen/margin_label_description"
        android:text="@string/textViewLabelDescription"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewReleaseDate" />

    <TextView
        android:id="@+id/textViewOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_label_description"
        android:layout_marginTop="@dimen/margin_label_description"
        android:layout_marginEnd="@dimen/margin_label_description"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelDescription" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTrailer"
        android:layout_width="@dimen/null_dp_width"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOverview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewReview"
        android:layout_width="@dimen/null_dp_width"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewTrailer" />
</androidx.constraintlayout.widget.ConstraintLayout>